--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,12 @@ h1{
     font-family: cursive;
 }
 .content{
-    width: 45%;
+    width: 70%;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
     gap: 4rem;
+    margin: 0 auto;
 }
 .boom{
     position: absolute;
@@ -97,4 +98,28 @@ button:hover{
 }
 button:hover .hammer{
     display: none;
+}
+@media (max-width:768px) {
+    .content{
+        width: 95%;
+    }
+    h1{
+        font-size: 2.5rem;
+    }
+    .hole{
+        height: 6rem;
+        width: 6.5rem;
+    }
+    .hole:after{
+        height: 2rem;
+    }
+    .mole {
+        height: 5rem;
+        width: 5rem;
+        bottom: -100%;
+    }
+    
+    .mole.up{
+        bottom: 15%;
+    }
 }
